terraform/modules/networking/main.tf
resource "azurerm_virtual_network" "main" {
  name                = "vnet${var.name_suffix}"
  resource_group_name = var.name
  location            = var.location
  address_space       = var.vnet_address_space

  tags = merge({
    Name = "vnet-${var.project_name}${var.name_suffix}"
  }, var.tags)
}

resource "azurerm_subnet" "compute" {
  name                 = "compute-subnet${var.name_suffix}"
  resource_group_name  = var.name
  virtual_network_name = azurerm_virtual_network.main.name
  address_prefixes     = var.compute_subnet_address_prefix

  delegation {
    name = "aca-delegation"

    service_delegation {
      name    = "Microsoft.App/environments"
      actions = ["Microsoft.Network/virtualNetworks/subnets/join/action"]
    }
  }
}

resource "azurerm_network_security_group" "app" {
  name                = "app-nsg${var.name_suffix}"
  location            = var.location
  resource_group_name = var.name

  security_rule {
    name                       = "allow-http"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "allow-https"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  tags = merge({
    Name = "app-nsg-${var.project_name}${var.name_suffix}"
  }, var.tags)
}

resource "azurerm_subnet_network_security_group_association" "compute" {
  subnet_id                 = azurerm_subnet.compute.id
  network_security_group_id = azurerm_network_security_group.app.id
}
